--- a/src/common/less/index.less
+++ b/src/common/less/index.less
@@ -1,4 +1,12 @@
-body{
-    background: #fff;
-    font-size: 14px;
+html,body{
+        min-width: 600px;
+        min-height:100%;
+        background: #fff;
 }
+
+body{
+    font-size: 14px;
+    overflow-y:scroll;
+}
+
+ 
