--- a/src/common/less/index.less
+++ b/src/common/less/index.less
@@ -1,7 +1,7 @@
 html,body{
         min-width: 600px;
         min-height:100%;
-        background: #fff;
+        background: #ececec;
 }
 
 body{
